# HaskellPersistentTutorial

./: HaskellNixCabalStarter.cabal  package.yaml
chapters/: 0_Introduction.md  1_Switching to PostgreSQL.md  2_Real world example.md  3_A real real world example.md
extra/: docker-compose.yaml
nix/: sources.json
src/: Main.hs  User.hs
